Adição botão de voltar ao topo

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,6 +13,10 @@
                     <span class="sr-only">Carregando...</span>
                 </div>
             </div>
+            <button id="btnVoltarTopo" class="btn btn-primary" style="display: none;">
+                <i class="bi bi-chevron-double-up"></i>
+            </button>
+
             <h1 class="text-center mb-2">Banco de Sangue</h1>
             <p class="text-center">Seja bem-vindo! Para realizar a coleta de dados, cole o JSON no campo abaixo ou envie o arquivo diretamente, e clique em "Processar dados".</p>
 
