--- a/src/main/resources/static/assets/css/home.css
+++ b/src/main/resources/static/assets/css/home.css
@@ -56,3 +56,21 @@ h1 {
     border-color: #007bff;
     box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
 }
+
+#btnVoltarTopo {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 9999;
+    display: none;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    padding: 0;
+    text-align: center;
+    font-size: 20px;
+    border: none;
+    color: white;
+    cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
