--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -81,6 +81,10 @@
                                 <h5 class="mb-0">Candidatos por Estado</h5>
                             </div>
                             <div class="card-body">
+                                <div class="text-muted text-center small mt-0">
+                                    <small>Clique nas legendas para ocultar ou mostrar os estados</small><br>
+                                    <button class="btn btn-outline-secondary btn-sm" id="toggleVisibilidadeBtn" onclick="alternarLegendas()">Ocultar todos</button>
+                                </div>
                                 <canvas id="graficoCandidatosEstado" height="400"></canvas>
                             </div>
                         </div>
@@ -88,6 +92,18 @@
                 </div>
 
                 <div class="row">
+                    <!-- IMC médio por faixa etária (card maior) -->
+                    <div class="col-md-6 mb-4">
+                        <div class="card shadow-sm">
+                            <div class="card-header text-center">
+                                <h5>IMC médio por faixa etária</h5>
+                            </div>
+                            <div class="card-body">
+                                <canvas id="graficoImcPorIdade" height="200"></canvas>
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- percentual de obesos por sexo -->
                     <div class="col-md-6 mb-4">
                         <div class="card shadow-sm">
@@ -99,23 +115,11 @@
                             </div>
                         </div>
                     </div>
-
-                    <!-- IMC médio por faixa etária -->
-                    <div class="col-md-6 mb-4">
-                        <div class="card shadow-sm">
-                            <div class="card-header text-center">
-                                <h5>IMC médio por faixa etária</h5>
-                            </div>
-                            <div class="card-body">
-                                <canvas id="graficoImcPorIdade" height="200"></canvas>
-                            </div>
-                        </div>
-                    </div>
                 </div>
 
                 <div class="row">
                     <!-- média de idade por tipo sanguíneo -->
-                    <div class="col-md-6 mb-4">
+                    <div class="col-xl mb-4">
                         <div class="card shadow-sm">
                             <div class="card-header text-center">
                                 <h5>Média de idade por tipo sanguíneo</h5>
@@ -125,9 +129,8 @@
                             </div>
                         </div>
                     </div>
-
                     <!-- doadores por tipo sanguíneo -->
-                    <div class="col-md-6 mb-4">
+                    <div class="col-xl mb-4">
                         <div class="card shadow-sm">
                             <div class="card-header text-center">
                                 <h5>Doadores por tipo sanguíneo</h5>
@@ -138,8 +141,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-
         </div>
     </div>
 </div>
